--- a/index.html
+++ b/index.html
@@ -53,10 +53,35 @@
             </div>
         </section>
 
+        <section id="ressources" class="section section-alt">
+            <div class="container ressources-grid">
+                <div>
+                    <h2>Ressources & galerie</h2>
+                    <p class="section-intro">Découvrez l’identité visuelle de RiseUp Educ et notre offre de soutien scolaire à domicile pour l’année 2025–2026.</p>
+                    <p>Nous accompagnons les élèves du primaire au lycée avec une approche personnalisée, des enseignants passionnés et un lien constant avec les parents. Cette galerie présente le logo officiel de RiseUp Educ et le visuel de présentation générale utilisé dans notre communication.</p>
+                </div>
+                <div class="ressources-gallery">
+                    <article class="ressource-item">
+                        <h3>Logo officiel RiseUp Educ</h3>
+                        <div class="ressource-media">
+                            <img src="logo-riseup-educ.png" alt="Logo officiel RiseUp Educ" class="ressource-image">
+                        </div>
+                        <p class="ressource-caption">Symbole de l’excellence académique, de l’accompagnement et de l’élévation par le savoir.</p>
+                    </article>
+                    <article class="ressource-item">
+                        <h3>Flyer de présentation générale</h3>
+                        <div class="ressource-media">
+                            <img src="flyer-riseup-educ.jpg" alt="Flyer RiseUp Educ - présentation du soutien scolaire à domicile" class="ressource-image">
+                        </div>
+                        <p class="ressource-caption">Visuel mettant en avant notre soutien scolaire à domicile du CP1 à la Terminale, les systèmes scolaires français et ivoirien, ainsi que nos atouts clés.</p>
+                    </article>
+                </div>
+            </div>
+        </section>
+
         <section class="promo-section">
             <div class="container promo-grid">
                 <div class="promo-left">
-                    <img src="flyer-riseup-educ.jpg" alt="Flyer RiseUp Educ - Soutien scolaire à domicile" class="promo-image">
                     <div class="promo-badge">Rise Up Educ</div>
                     <p class="promo-slogan">Apprendre pour s’élever</p>
                     <h2 class="promo-title">Soutien scolaire à domicile</h2>
