Ajout des visuels logo + flyer

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <article class="ressource-item">
                         <h3>Logo officiel RiseUp Educ</h3>
                         <div class="ressource-media">
-                            <img src="logo-riseup-educ.png" alt="Logo officiel RiseUp Educ" class="ressource-image">
+                            <img src="logo-riseup-educ.jpg" alt="Logo officiel RiseUp Educ" class="ressource-image">
                         </div>
                         <p class="ressource-caption">Symbole de l’excellence académique, de l’accompagnement et de l’élévation par le savoir.</p>
                     </article>
